--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,28 @@ h1 {
 }
 h2,
 h3 {
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 
 p {
   padding: 15px;
   margin-bottom: 15px;
+}
+
+section ul {
+  list-style: none;
+}
+
+section ul li {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.content,
+p {
+  padding: 1rem 0;
 }
 
 /* button {
