--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -4,7 +4,8 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.3s;npm run dev
+  
   font-weight: bold;
   margin-right: 1rem;
   padding: 0.6em 1.2em;
