--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,8 +4,8 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: all 0.3s;npm run dev
-  
+  transition: all 0.3s;
+
   font-weight: bold;
   margin-right: 1rem;
   padding: 0.6em 1.2em;
@@ -22,6 +22,9 @@
   }
 }
 
+.button:disabled {
+  cursor: not-allowed;
+}
 .button.active {
   --opacity: 0.9;
   background: #3e6ae1;
