--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,6 @@ a:hover {
 body {
   font-family: "Roboto", sans-serif;
 }
-header {
-  height: 50px;
-  display: flex;
-  padding: 0.2rem;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  background: #fafafa;
-}
 
 main {
   max-width: 850px;
@@ -98,4 +89,11 @@ button:focus-visible {
 
 .centered {
   text-align: center;
+}
+.control {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 0.5rem;
+  width: 100%;
+  margin-bottom: 1rem;
 }
